# ticket-to-ride

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/workflows/: publish_docs.yml  static-analysis.yml
api_documentation/: index.html
applied_graph_theory/: index.html
demo/: index.html
docs/: api_documentation.md  applied_graph_theory.md  demo.ipynb  index.md  installation.md  legal_disclaimer.md
legal_disclaimer/: index.html
src/ticket_to_ride/: __about__.py  __init__.py  car.py  city.py  color.py  functional.py  map.py  route.py  ticket.py  transportation_type.py
src/ticket_to_ride/default_components/: __init__.py
src/ticket_to_ride/default_components/europe/: __init__.py  cities.py  map.py  routes.py  tickets.py
src/ticket_to_ride/default_components/north_america/: __init__.py  cities.py  map.py  routes.py  tickets.py
src/ticket_to_ride/default_components/rails_and_sails/: __init__.py  cities.py  map.py  routes.py
src/ticket_to_ride/utils/: __init__.py  graph_visualization.py
tests/: __init__.py  test_functional.py  test_map.py  test_route.py
tests/utils/: test_graph_visualization.py
