[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-to-ride"
dynamic = ["version"]
description = 'Python implementation of Ticket to Ride board game'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ticket to ride", "board game", "graph"]
authors = [
  { name = "Yury Fedotov", email = "fedotov.business@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic~=2.7",
  "networkx~=3.2",
]

[project.optional-dependencies]
dev = [
  "ruff~=0.4",
  "mypy>=1.0.0",
  "types-networkx~=3.2",
]

[project.urls]
Documentation = "https://github.com/Yury Fedotov/ticket-to-ride#readme"
Issues = "https://github.com/Yury Fedotov/ticket-to-ride/issues"
Source = "https://github.com/Yury Fedotov/ticket-to-ride"

[tool.hatch.version]
path = "src/ticket_to_ride/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ticket_to_ride tests}"

[tool.coverage.run]
source_pkgs = ["ticket_to_ride", "tests"]
branch = true
parallel = true
omit = [
  "src/ticket_to_ride/__about__.py",
]

[tool.coverage.paths]
ticket_to_ride = ["src/ticket_to_ride", "*/ticket-to-ride/src/ticket_to_ride"]
tests = ["tests", "*/ticket-to-ride/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
